# vl_map_refinement

./: CMakeLists.txt  README.md  config.json  extrinsics.json  fuse_plugins.xml  package.xml  pinhole_color.json
config/: config.json
include/TCVL/: lidar_visual_mapper.h  pose_lookup.h  utils.h
include/TCVL/constraints/: point_to_plane_functor.h  reprojection_functor.h  vl_constraint.h
include/vl_map_refinement/: lidar_visual_mapper.h  pose_lookup.h
include/vl_map_refinement/constraints/: point_to_plane_functor.h  reprojection_constraint.h  reprojection_functor.h  vl_constraint.h
src/: lidar_visual_mapper.cpp  main.cpp  pose_lookup.cpp  utils.cpp  vl_study_main.cpp
src/constraints/: reprojection_constraint.cpp  vl_constraint.cpp
