<?xml version="1.0"?>
<package format="2">
  <name>bs_tools</name>
  <version>0.1.0</version>
  <description>Tools for testing visual-lidar constraints</description>

  <author email="jake.mclaughlin98@gmail.com">Jake McLaughlin</author>
  <maintainer email="jake.mclaughlin98@gmail.com">Jake McLaughlin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>

  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>fuse_constraints</depend>
  <depend>fuse_core</depend>
  <depend>fuse_graphs</depend>
  <depend>fuse_variables</depend>

</package>
